# mdbook-reference-table

./: Cargo.toml  README.md
src/: cli.rs  main.rs  reference_table.rs
tests/test_mdbook_reference_table/: book.toml  reference-table.yaml
tests/test_mdbook_reference_table/src/: SUMMARY.md
tests/test_mdbook_reference_table/src/content/subject-1/: aliter-facta-cornibus-tandem.md  audita-quot.md
tests/test_mdbook_reference_table/src/content/subject-2/subfolder-1/: bos-quae-inde-limen.md
tests/test_mdbook_reference_table/src/content/subject-3/subfolder-1/subsubfolder-1/: esse-corpora-achaidas-sacros-ad-quas.md
